--- a/data/game_1.toml
+++ b/data/game_1.toml
@@ -6,9 +6,11 @@ title = "One By One"
 desc = "Put each number in the outbox, one by one."
 
 [game]
+outbox_size = 2
 outbox = [1, 2]
 # max_steps = 100
 # max_instructions = 100
+inbox_size = 2
 inbox = [1, 2]
 available_instructions = ["inbox", "outbox"]
 available_tiles = 0
