--- a/data/1.toml
+++ b/data/1.toml
@@ -5,6 +5,8 @@
 level = 1
 title = "One By One"
 desc = "Put each number in the outbox, one by one."
+inbox_example = "1, 2, 3, 4, 5"
+outbox_example = "1, 2, 3, 4, 5"
 
 [game]
 outbox = [1, 2]
